--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -1052,16 +1052,16 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHBox" id="tweet_list_hbox">
+                  <object class="GtkHBox" id="tweet_lists_hbox">
                     <property name="visible">True</property>
                     <child>
-                      <object class="GtkNotebook" id="tweet_list_notebook">
+                      <object class="GtkNotebook" id="tweet_lists_notebook">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="scrollable">True</property>
                         <property name="enable_popup">True</property>
                         <child>
-                          <object class="GtkAspectFrame" id="aspectframe1">
+                          <object class="GtkAspectFrame" id="tweet_lists_aspect_frame">
                             <property name="visible">True</property>
                             <property name="label_xalign">0</property>
                             <property name="shadow_type">none</property>
@@ -1071,7 +1071,7 @@
                           </object>
                         </child>
                         <child type="tab">
-                          <object class="GtkLabel" id="label1">
+                          <object class="GtkLabel" id="tweet_lists_null_page_label">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">page 1</property>
                           </object>
