--- a/data/control-panel.ui
+++ b/data/control-panel.ui
@@ -226,6 +226,14 @@
                 <property name="visible">True</property>
                 <property name="orientation">vertical</property>
                 <child>
+                  <object class="GtkHSeparator" id="control_panel_view_controls_hseparator">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkAspectFrame" id="control_panel_view_controls_aspect_frame">
                     <property name="visible">True</property>
                     <property name="label_xalign">0</property>
@@ -239,12 +247,6 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="has_tooltip">True</property>
-                            <property name="tooltip_markup">
-				    Switch between enlarged &amp; compact control panel.
-				    Enlarged view: Shows all control panel buttons &amp; items.
-				    Compact view: Shows only enabled control panel buttons &amp; items.
-			    </property>
                             <child>
                               <object class="GtkImage" id="control_panel_compact_view_image">
                                 <property name="visible">True</property>
@@ -275,7 +277,15 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="position">0</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkHSeparator" id="control_panel_composition_hseparator">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
@@ -480,7 +490,7 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="position">1</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
@@ -566,7 +576,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">2</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
               </object>
