--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -13,6 +13,8 @@
       <column type="gchararray"/>
       <!-- column-name STRING_BEST_FRIEND_USER_NAME -->
       <column type="gchararray"/>
+      <!-- column-name GUINT_BEST_FRIENDS_UNREAD_UPDATES -->
+      <column type="guint"/>
       <!-- column-name GDOUBLE_BEST_FRIENDS_NEWEST_UPDATE_ID -->
       <column type="gdouble"/>
     </columns>
@@ -798,6 +800,19 @@
                                   <object class="GtkCellRendererText" id="best_friends_online_service_cell_renderer_text"/>
                                   <attributes>
                                     <attribute name="markup">2</attribute>
+                                  </attributes>
+                                </child>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkTreeViewColumn" id="best_friends_unread_updates_tree_view_column">
+                                <property name="sizing">fixed</property>
+                                <property name="fixed_width">3</property>
+                                <property name="title">New:</property>
+                                <child>
+                                  <object class="GtkCellRendererProgress" id="best_friends_unread_updates_cell_renderer_progress"/>
+                                  <attributes>
+                                    <attribute name="text">4</attribute>
                                   </attributes>
                                 </child>
                               </object>
