--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -652,7 +652,7 @@
                             </child>
                             <child>
                               <object class="GtkFrame" id="frame2">
-                                <property name="visible">True</property>
+                                <property name="visible">False</property>
                                 <property name="label_xalign">0</property>
                                 <property name="shadow_type">none</property>
                                 <child>
