--- a/data/main-window.in.ui
+++ b/data/main-window.in.ui
@@ -765,7 +765,7 @@
                       <object class="GtkScrolledWindow" id="best_friends_scrolled_window">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">automatic</property>
+                        <property name="hscrollbar_policy">never</property>
                         <property name="vscrollbar_policy">automatic</property>
                         <property name="shadow_type">etched-in</property>
                         <child>
@@ -807,12 +807,12 @@
                             <child>
                               <object class="GtkTreeViewColumn" id="best_friends_unread_updates_tree_view_column">
                                 <property name="sizing">fixed</property>
-                                <property name="fixed_width">3</property>
+                                <property name="fixed_width">48</property>
                                 <property name="title">New:</property>
                                 <child>
-                                  <object class="GtkCellRendererProgress" id="best_friends_unread_updates_cell_renderer_progress"/>
+                                  <object class="GtkCellRendererText" id="best_friends_unread_updates_cell_renderer_text"/>
                                   <attributes>
-                                    <attribute name="text">4</attribute>
+                                    <attribute name="markup">4</attribute>
                                   </attributes>
                                 </child>
                               </object>
