--- a/data/update-viewer.in.ui
+++ b/data/update-viewer.in.ui
@@ -56,6 +56,8 @@
       <column type="gchararray"/>
       <!-- column-name GINT_SELECTED_INDEX -->
       <column type="gint"/>
+      <!-- column-name GINT_LIST_STORE_INDEX -->
+      <column type="gint"/>
       <!-- column-name GBOOLEAN_UNREAD -->
       <column type="gboolean"/>
     </columns>
