--- a/data/control-panel.ui
+++ b/data/control-panel.ui
@@ -49,8 +49,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="image">best_friend_image</property>
-                        <accelerator key="asterisk" signal="activate" modifiers="GDK_MOD1_MASK"/>
                         <accelerator key="exclam" signal="activate" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="asterisk" signal="activate" modifiers="GDK_MOD1_MASK"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -406,13 +406,21 @@
                         <property name="position">0</property>
                       </packing>
                     </child>
-                    <child>
+		    <child>
                       <object class="GtkComboBoxEntry" id="control_panel_sexy_entry_combo_box_entry">
                         <property name="visible">True</property>
                         <property name="model">previous_updates_list_store</property>
                         <property name="add_tearoffs">True</property>
-                        <property name="tearoff_title">Previous Updates</property>
-                      </object>
+			<property name="tearoff_title">Previous Updates</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="previous_update_cell_renderer_text">
+                            <property name="xpad">5</property>
+                          </object>
+                          <attributes>
+                            <attribute name="text">0</attribute>
+                          </attributes>
+                        </child>
+                     </object>
                       <packing>
                         <property name="position">1</property>
                       </packing>
@@ -422,8 +430,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_MOD1_MASK"/>
                         <accelerator key="s" signal="clicked" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_MOD1_MASK"/>
                         <child>
                           <object class="GtkImage" id="sexy_send_image">
                             <property name="visible">True</property>
@@ -442,8 +450,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <accelerator key="d" signal="clicked" modifiers="GDK_MOD1_MASK"/>
+                        <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="sexy_dm_image">
                             <property name="visible">True</property>
@@ -473,8 +481,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="n" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <accelerator key="n" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="n" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="new_update_image">
                             <property name="visible">True</property>
@@ -504,8 +512,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="d" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                        <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                         <child>
                           <object class="GtkImage" id="dm_form_active_image">
                             <property name="visible">True</property>
@@ -736,6 +744,8 @@ _Controls</property>
       <column type="gpointer"/>
       <!-- column-name IN_REPLY_TO_STATUS_ID -->
       <column type="gdouble"/>
+      <!-- column-name GSTRING_NULL -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkImage" id="best_friend_image">
