--- a/data/update-viewer.in.ui
+++ b/data/update-viewer.in.ui
@@ -230,7 +230,7 @@
             <property name="can_focus">True</property>
             <property name="model">update_viewer_list_store</property>
             <property name="headers_clickable">False</property>
-            <property name="expander_column">update_viewer_string_tweet_tree_view_column</property>
+            <property name="expander_column">update_viewer_string_update_tree_view_column</property>
             <property name="reorderable">True</property>
             <property name="rules_hint">True</property>
             <property name="search_column">1</property>
@@ -257,14 +257,14 @@
               </object>
             </child>
             <child>
-              <object class="GtkTreeViewColumn" id="update_viewer_string_tweet_tree_view_column">
+              <object class="GtkTreeViewColumn" id="update_viewer_string_update_tree_view_column">
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="title">Update</property>
                 <property name="expand">True</property>
                 <property name="clickable">True</property>
                 <child>
-                  <object class="GtkCellRendererText" id="update_viewer_string_tweet_cell_renderer_text">
+                  <object class="GtkCellRendererText" id="update_viewer_string_update_cell_renderer_text">
                     <property name="xpad">5</property>
                     <property name="ypad">5</property>
                     <property name="yalign">0</property>
@@ -308,7 +308,7 @@
                 <property name="resizable">True</property>
                 <property name="sizing">fixed</property>
                 <property name="min_width">95</property>
-                <property name="title">RCPT:</property>
+                <property name="title">To/RCPT:</property>
                 <child>
                   <object class="GtkCellRendererText" id="update_viewer_string_rcpt_cell_renderer_text">
                     <property name="xpad">5</property>
